# doxwenju

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  agent-output-full-layout-v6.docx  agent-output-inline-word-final.docx  agent-output-ooxml-final.docx  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_profiles_targets.py  0003_hybrid_retrieval.py  0004_patch_plans.py  0005_patch_execution.py  0006_render_snapshots.py  0007_agent_runs.py  0007_review_reports.py
app/: main.py
app/api/: targets.py  templates.py
app/core/: config.py
app/models/: __init__.py  document.py
app/schemas/: template.py
app/services/: atoms.py  docx_package.py  embeddings.py  ingestion.py  ooxml.py  ooxml_postprocess.py  patch_engine.py  patch_planner.py  profile_builder.py  rendering.py  repair_planner.py  rerank.py  review_report.py  target_mapping.py  word_postprocess.py
app/static/: index.html
app/tasks/: celery_app.py  template_tasks.py
scripts/: smoke_agent.sh
tests/: conftest.py  test_agent_render_gate.py  test_atoms.py  test_docx_package.py  test_ooxml.py  test_patch_engine.py  test_profile_mapping.py
tests/fixtures/: docx_builder.py
