[project]
name = "doxwenju"
version = "0.1.0"
description = "DOCX visual consistency migration backend MVP"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "celery[redis]>=5.4.0",
    "defusedxml>=0.7.1",
    "fastapi>=0.115.0",
    "pgvector>=0.3.5",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.34",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.2",
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
